test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/conflicting_param_union_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  struct
  identifier(s)
  ;
  int
  identifier(foo)
  (
  struct
  identifier(s)
  identifier(x)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(s)
  ;
  int
  identifier(foo)
  (
  union
  identifier(s)
  identifier(x)
  )
  ;
  return
  const int(0)
  ;
  }
